[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Florian Maas <fpgmaas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
databricks-sdk = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
